added cs ids for buttons

--- a/website.html
+++ b/website.html
@@ -422,22 +422,22 @@
             <tr>
                 <td class="label">Elementary I</td>
                 <td id="stillNeeded"></td>
-                <td></td>
+                <td id="c34"></td>
             </tr>
             <tr>
                 <td class="label">Elementary II</td>
                 <td id="stillNeeded"></td>
-                <td></td>
+                <td id="c35"></td>
             </tr>
             <tr>
                 <td class="label">Intermediate I</td>
                 <td id="stillNeeded10"></td>
-                <td id="10"></td>
+                <td id="c36"></td>
             </tr>
             <tr>
                 <td class="label">Intermediate II</td>
                 <td id="stillNeeded"></td>
-                <td></td>
+                <td id="c37"></td>
             </tr>
             <tr>
                 <td colspan="3" id="notes">
@@ -505,7 +505,7 @@
             <tr>
                 <td class="label" id="underSub">Group D: European Societies</td>
                 <td id="stillNeeded16">Still Needed:</td>
-                <tdid id="16"></td>
+                <td id="16"></td>
             </tr>
 
             <!-- Major in Computer Science -->
@@ -528,53 +528,53 @@
             </tr>
             <tr>
                 <td class="label" id="underSub">Intro to Computer Science</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc1">Still Needed:</td>
+                <td id="c1"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Software Analysis and Design I</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc2">Still Needed:</td>
+                <td id="c2"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Discrete Structures</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc3">Still Needed:</td>
+                <td id="c3"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Computer Architecture I</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc8">Still Needed:</td>
+                <td id="c8"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Software Design & Analysis II</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc5">Still Needed:</td>
+                <td id="c5"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Computer Architecture II</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc11">Still Needed:</td>
+                <td id="c11"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Computer Theory I</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc6">Still Needed:</td>
+                <td id="c6"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Software Design & Analysis III</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc10">Still Needed:</td>
+                <td id="c10"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Operating Systems</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc9">Still Needed:</td>
+                <td id="c9"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Advanced Applications: Capstone Course</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc15">Still Needed:</td>
+                <td id="c15"></td>
             </tr>
             <tr>
                 <td colspan="3" id="notes">
@@ -589,7 +589,7 @@
             <tr>
                 <td class="label">Free Electives</td>
                 <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="ce"></td>
             </tr>
             <tr>
                 <td colspan="3" id="notes">
@@ -601,27 +601,32 @@
             </tr>
             <tr>
                 <td class="label" id="underSub">Calculus I</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc4">Still Needed:</td>
+                <td id="c4"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Calculus II</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc7">Still Needed:</td>
+                <td id="c7"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Matrix Algebra</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc13">Still Needed:</td>
+                <td id="c13"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Intro to Applied Statistics</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeededc12">Still Needed:</td>
+                <td id="c12"></td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub"></td>
+                <td id="stillNeededc12"></td>
+                <td></td>
             </tr>
         </table>
         <!-- Dropdown Menu -->
-        <!-- <div class="dropdown">
+        <!--<div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">CSCI 135</button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="#">CSCI 135 info blah blah blah blah blah blah blah blah blah
