Changed 'Student Class Level' to 'Student Year' in nav bar

--- a/website.html
+++ b/website.html
@@ -55,7 +55,7 @@
                     <th class="norb" id="degree">Degree</th>
                     <th class="norb" id="major">Major</th>
                     <th class="norb" id="school">School</th>
-                    <th id="year">Student Class Level</th>
+                    <th id="year">Student Year</th>
                     <!-- <th>|</th> -->
                     <th id="audit">Last Audit</th>
                     <th class="norb" id="alinks"><a href="#">CUNYfirst</a></th>
